// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should get Navigation Json for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/package-1",
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "url": "@scope/package-1/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "url": "@scope/package-1/index.md"
  },
  {
    "title": "package-1b",
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "url": "package-1b/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "url": "package-1b/index.md"
  },
  {
    "title": "package-2",
    "children": [
      {
        "title": "module-1",
        "url": "package-2/module-1/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "url": "package-2/module-1/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "url": "package-2/module-2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "package-2/module-2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "package-2/index.md"
  },
  {
    "title": "@scope/package-3",
    "children": [
      {
        "title": "index",
        "url": "@scope/package-3/index/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterfaceForIndexModule",
                "url": "@scope/package-3/index/interfaces/PackageInterfaceForIndexModule.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-1",
        "url": "@scope/package-3/module-1/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "url": "@scope/package-3/module-1/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "url": "@scope/package-3/module-2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "@scope/package-3/module-2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "@scope/package-3/index.md"
  },
  {
    "title": "package-4",
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "url": "package-4/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "url": "package-4/index.md"
  },
  {
    "title": "package-5",
    "children": [
      {
        "title": "module2",
        "url": "package-5/module2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "package-5/module2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "package-5/package-5.md"
  },
  {
    "title": "package-6",
    "children": [
      {
        "title": "module2",
        "url": "package-6/module2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "package-6/module2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "package-6.md"
  }
]"
`;

exports[`Navigation should get Navigation Json for packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/package-1",
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "url": "package-1/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "url": "package-1/index.md"
  },
  {
    "title": "package-1b",
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "url": "package-1b/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "url": "package-1b/index.md"
  },
  {
    "title": "package-2",
    "children": [
      {
        "title": "module-1",
        "url": "package-2/module-1/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "url": "package-2/module-1/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "url": "package-2/module-2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "package-2/module-2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "package-2/index.md"
  },
  {
    "title": "@scope/package-3",
    "children": [
      {
        "title": "index",
        "url": "package-3/index/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterfaceForIndexModule",
                "url": "package-3/index/interfaces/PackageInterfaceForIndexModule.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-1",
        "url": "package-3/module-1/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "url": "package-3/module-1/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "url": "package-3/module-2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "package-3/module-2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "package-3/index.md"
  },
  {
    "title": "package-4",
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "url": "package-4/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "url": "package-4/index.md"
  },
  {
    "title": "package-5",
    "children": [
      {
        "title": "module2",
        "url": "package-5/module2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "package-5/module2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "package-5/package-5.md"
  },
  {
    "title": "package-6",
    "children": [
      {
        "title": "module2",
        "url": "package-6/module2/index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "package-6/module2/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "package-6.md"
  }
]"
`;

exports[`Navigation should get Navigation Json for packages: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/package-1",
    "children": [
      {
        "title": "Globals",
        "url": "@scope/package-1/globals.md"
      }
    ],
    "url": "@scope/package-1/index.md"
  },
  {
    "title": "package-1b",
    "children": [],
    "url": "package-1b/index.md"
  },
  {
    "title": "package-2",
    "children": [
      {
        "title": "module-1",
        "url": "package-2/module-1.md"
      },
      {
        "title": "module-2",
        "url": "package-2/module-2.md"
      }
    ],
    "url": "package-2/index.md"
  },
  {
    "title": "@scope/package-3",
    "children": [
      {
        "title": "index",
        "url": "@scope/package-3/module_index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterfaceForIndexModule",
                "url": "@scope/package-3/interfaces/PackageInterfaceForIndexModule.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-1",
        "url": "@scope/package-3/module-1.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "url": "@scope/package-3/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "url": "@scope/package-3/module-2.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "@scope/package-3/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "@scope/package-3/index.md"
  },
  {
    "title": "package-4",
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "url": "package-4/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "url": "package-4/index.md"
  },
  {
    "title": "package-5",
    "children": [
      {
        "title": "module2",
        "url": "package-5/module2.md"
      }
    ],
    "url": "package-5/package-5.md"
  },
  {
    "title": "package-6",
    "children": [
      {
        "title": "module2",
        "url": "package-6/module2.md"
      }
    ],
    "url": "package-6.md"
  }
]"
`;

exports[`Navigation should get Navigation Json for packages: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/package-1",
    "children": [],
    "url": "package-1/index.md"
  },
  {
    "title": "package-1b",
    "children": [],
    "url": "package-1b/index.md"
  },
  {
    "title": "package-2",
    "children": [
      {
        "title": "module-1",
        "url": "package-2/module-1.md"
      },
      {
        "title": "module-2",
        "url": "package-2/module-2.md"
      }
    ],
    "url": "package-2/index.md"
  },
  {
    "title": "@scope/package-3",
    "children": [
      {
        "title": "index",
        "url": "package-3/module_index.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterfaceForIndexModule",
                "url": "package-3/interfaces/PackageInterfaceForIndexModule.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-1",
        "url": "package-3/module-1.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface1",
                "url": "package-3/interfaces/PackageInterface1.md"
              }
            ]
          }
        ]
      },
      {
        "title": "module-2",
        "url": "package-3/module-2.md",
        "children": [
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "PackageInterface2",
                "url": "package-3/interfaces/PackageInterface2.md"
              }
            ]
          }
        ]
      }
    ],
    "url": "package-3/index.md"
  },
  {
    "title": "package-4",
    "children": [
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "PackageInterface",
            "url": "package-4/interfaces/PackageInterface.md"
          }
        ]
      }
    ],
    "url": "package-4/index.md"
  },
  {
    "title": "package-5",
    "children": [
      {
        "title": "module2",
        "url": "package-5/module2.md"
      }
    ],
    "url": "package-5/package-5.md"
  },
  {
    "title": "package-6",
    "children": [
      {
        "title": "module2",
        "url": "package-6/module2.md"
      }
    ],
    "url": "package-6.md"
  }
]"
`;

exports[`Navigation should gets Navigation Json for entry modules: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/module-1",
    "url": "@scope/module-1/README.mdx",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "ModuleClass",
            "url": "@scope/module-1/classes/ModuleClass.mdx"
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "url": "module-2/README.mdx",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "ModuleClass",
            "url": "module-2/classes/ModuleClass.mdx"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for entry modules: (Output File Strategy "members") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/module-1",
    "url": "module-1/index.mdx",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "ModuleClass",
            "url": "module-1/classes/ModuleClass.mdx"
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "url": "module-2/index.mdx",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "ModuleClass",
            "url": "module-2/classes/ModuleClass.mdx"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for entry modules: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/module-1",
    "url": "@scope/module-1.mdx"
  },
  {
    "title": "module-2",
    "url": "module-2.mdx"
  }
]"
`;

exports[`Navigation should gets Navigation Json for entry modules: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/module-1",
    "url": "module-1.mdx"
  },
  {
    "title": "module-2",
    "url": "module-2.mdx"
  }
]"
`;

exports[`Navigation should gets Navigation Json for modules with parts: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/namespace",
    "url": "namespace/README.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "url": "namespace/enumerations/EnumA.md"
          },
          {
            "title": "EnumB",
            "url": "namespace/enumerations/EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "url": "namespace/classes/ClassA.md"
          },
          {
            "title": "ClassB",
            "url": "namespace/classes/ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "url": "namespace/interfaces/InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "url": "namespace/interfaces/InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "url": "namespace/type-aliases/TypeA.md"
          },
          {
            "title": "TypeB",
            "url": "namespace/type-aliases/TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-1",
    "children": [
      {
        "title": "submodules",
        "url": "module-1/submodules/submodule-1/README.md",
        "children": [
          {
            "title": "Enumerations",
            "children": [
              {
                "title": "EnumA",
                "url": "module-1/submodules/submodule-1/enumerations/EnumA.md"
              },
              {
                "title": "EnumB",
                "url": "module-1/submodules/submodule-1/enumerations/EnumB.md"
              }
            ]
          },
          {
            "title": "Classes",
            "children": [
              {
                "title": "ClassA",
                "url": "module-1/submodules/submodule-1/classes/ClassA.md"
              },
              {
                "title": "ClassB",
                "url": "module-1/submodules/submodule-1/classes/ClassB.md"
              }
            ]
          },
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "InterfaceA",
                "url": "module-1/submodules/submodule-1/interfaces/InterfaceA.md"
              },
              {
                "title": "InterfaceB",
                "url": "module-1/submodules/submodule-1/interfaces/InterfaceB.md"
              }
            ]
          },
          {
            "title": "Type Aliases",
            "children": [
              {
                "title": "TypeA",
                "url": "module-1/submodules/submodule-1/type-aliases/TypeA.md"
              },
              {
                "title": "TypeB",
                "url": "module-1/submodules/submodule-1/type-aliases/TypeB.md"
              }
            ]
          }
        ]
      },
      {
        "title": "submodules",
        "children": [
          {
            "title": "submodule-2",
            "url": "module-1/submodules/submodule-2/README.md",
            "children": [
              {
                "title": "Enumerations",
                "children": [
                  {
                    "title": "EnumA",
                    "url": "module-1/submodules/submodule-2/enumerations/EnumA.md"
                  },
                  {
                    "title": "EnumB",
                    "url": "module-1/submodules/submodule-2/enumerations/EnumB.md"
                  }
                ]
              },
              {
                "title": "Classes",
                "children": [
                  {
                    "title": "ClassA",
                    "url": "module-1/submodules/submodule-2/classes/ClassA.md"
                  },
                  {
                    "title": "ClassB",
                    "url": "module-1/submodules/submodule-2/classes/ClassB.md"
                  }
                ]
              },
              {
                "title": "Interfaces",
                "children": [
                  {
                    "title": "InterfaceA",
                    "url": "module-1/submodules/submodule-2/interfaces/InterfaceA.md"
                  },
                  {
                    "title": "InterfaceB",
                    "url": "module-1/submodules/submodule-2/interfaces/InterfaceB.md"
                  }
                ]
              },
              {
                "title": "Type Aliases",
                "children": [
                  {
                    "title": "TypeA",
                    "url": "module-1/submodules/submodule-2/type-aliases/TypeA.md"
                  },
                  {
                    "title": "TypeB",
                    "url": "module-1/submodules/submodule-2/type-aliases/TypeB.md"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "children": [
      {
        "title": "namespace-2",
        "url": "module-2/namespace-2/README.md",
        "children": [
          {
            "title": "Enumerations",
            "children": [
              {
                "title": "EnumA",
                "url": "module-2/namespace-2/enumerations/EnumA.md"
              },
              {
                "title": "EnumB",
                "url": "module-2/namespace-2/enumerations/EnumB.md"
              }
            ]
          },
          {
            "title": "Classes",
            "children": [
              {
                "title": "ClassA",
                "url": "module-2/namespace-2/classes/ClassA.md"
              },
              {
                "title": "ClassB",
                "url": "module-2/namespace-2/classes/ClassB.md"
              }
            ]
          },
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "InterfaceA",
                "url": "module-2/namespace-2/interfaces/InterfaceA.md"
              },
              {
                "title": "InterfaceB",
                "url": "module-2/namespace-2/interfaces/InterfaceB.md"
              }
            ]
          },
          {
            "title": "Type Aliases",
            "children": [
              {
                "title": "TypeA",
                "url": "module-2/namespace-2/type-aliases/TypeA.md"
              },
              {
                "title": "TypeB",
                "url": "module-2/namespace-2/type-aliases/TypeB.md"
              }
            ]
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for modules with parts: (Output File Strategy "members") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/namespace",
    "url": "@scope.namespace.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "url": "@scope.namespace.Enumeration.EnumA.md"
          },
          {
            "title": "EnumB",
            "url": "@scope.namespace.Enumeration.EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "url": "@scope.namespace.Class.ClassA.md"
          },
          {
            "title": "ClassB",
            "url": "@scope.namespace.Class.ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "url": "@scope.namespace.Interface.InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "url": "@scope.namespace.Interface.InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "url": "@scope.namespace.Type.TypeA.md"
          },
          {
            "title": "TypeB",
            "url": "@scope.namespace.Type.TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-1",
    "children": [
      {
        "title": "submodules",
        "url": "module-1.submodules.submodule-1.md",
        "children": [
          {
            "title": "Enumerations",
            "children": [
              {
                "title": "EnumA",
                "url": "module-1.submodules.submodule-1.Enumeration.EnumA.md"
              },
              {
                "title": "EnumB",
                "url": "module-1.submodules.submodule-1.Enumeration.EnumB.md"
              }
            ]
          },
          {
            "title": "Classes",
            "children": [
              {
                "title": "ClassA",
                "url": "module-1.submodules.submodule-1.Class.ClassA.md"
              },
              {
                "title": "ClassB",
                "url": "module-1.submodules.submodule-1.Class.ClassB.md"
              }
            ]
          },
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "InterfaceA",
                "url": "module-1.submodules.submodule-1.Interface.InterfaceA.md"
              },
              {
                "title": "InterfaceB",
                "url": "module-1.submodules.submodule-1.Interface.InterfaceB.md"
              }
            ]
          },
          {
            "title": "Type Aliases",
            "children": [
              {
                "title": "TypeA",
                "url": "module-1.submodules.submodule-1.Type.TypeA.md"
              },
              {
                "title": "TypeB",
                "url": "module-1.submodules.submodule-1.Type.TypeB.md"
              }
            ]
          }
        ]
      },
      {
        "title": "submodules",
        "children": [
          {
            "title": "submodule-2",
            "url": "module-1.submodules.submodule-2.md",
            "children": [
              {
                "title": "Enumerations",
                "children": [
                  {
                    "title": "EnumA",
                    "url": "module-1.submodules.submodule-2.Enumeration.EnumA.md"
                  },
                  {
                    "title": "EnumB",
                    "url": "module-1.submodules.submodule-2.Enumeration.EnumB.md"
                  }
                ]
              },
              {
                "title": "Classes",
                "children": [
                  {
                    "title": "ClassA",
                    "url": "module-1.submodules.submodule-2.Class.ClassA.md"
                  },
                  {
                    "title": "ClassB",
                    "url": "module-1.submodules.submodule-2.Class.ClassB.md"
                  }
                ]
              },
              {
                "title": "Interfaces",
                "children": [
                  {
                    "title": "InterfaceA",
                    "url": "module-1.submodules.submodule-2.Interface.InterfaceA.md"
                  },
                  {
                    "title": "InterfaceB",
                    "url": "module-1.submodules.submodule-2.Interface.InterfaceB.md"
                  }
                ]
              },
              {
                "title": "Type Aliases",
                "children": [
                  {
                    "title": "TypeA",
                    "url": "module-1.submodules.submodule-2.Type.TypeA.md"
                  },
                  {
                    "title": "TypeB",
                    "url": "module-1.submodules.submodule-2.Type.TypeB.md"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "children": [
      {
        "title": "namespace-2",
        "url": "module-2.namespace-2.md",
        "children": [
          {
            "title": "Enumerations",
            "children": [
              {
                "title": "EnumA",
                "url": "module-2.namespace-2.Enumeration.EnumA.md"
              },
              {
                "title": "EnumB",
                "url": "module-2.namespace-2.Enumeration.EnumB.md"
              }
            ]
          },
          {
            "title": "Classes",
            "children": [
              {
                "title": "ClassA",
                "url": "module-2.namespace-2.Class.ClassA.md"
              },
              {
                "title": "ClassB",
                "url": "module-2.namespace-2.Class.ClassB.md"
              }
            ]
          },
          {
            "title": "Interfaces",
            "children": [
              {
                "title": "InterfaceA",
                "url": "module-2.namespace-2.Interface.InterfaceA.md"
              },
              {
                "title": "InterfaceB",
                "url": "module-2.namespace-2.Interface.InterfaceB.md"
              }
            ]
          },
          {
            "title": "Type Aliases",
            "children": [
              {
                "title": "TypeA",
                "url": "module-2.namespace-2.Type.TypeA.md"
              },
              {
                "title": "TypeB",
                "url": "module-2.namespace-2.Type.TypeB.md"
              }
            ]
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for modules with parts: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "@scope/namespace",
    "url": "namespace.md"
  },
  {
    "title": "module-1",
    "children": [
      {
        "title": "submodules",
        "url": "module-1/submodules/submodule-1.md"
      },
      {
        "title": "submodules",
        "children": [
          {
            "title": "submodule-2",
            "url": "module-1/submodules/submodule-2.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "children": [
      {
        "title": "namespace-2",
        "url": "module-2/namespace-2.md"
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for modules with parts: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[
  {
    "title": "@scope/namespace",
    "url": "@scope.namespace.md"
  },
  {
    "title": "module-1",
    "children": [
      {
        "title": "submodules",
        "url": "module-1.submodules.submodule-1.md"
      },
      {
        "title": "submodules",
        "children": [
          {
            "title": "submodule-2",
            "url": "module-1.submodules.submodule-2.md"
          }
        ]
      }
    ]
  },
  {
    "title": "module-2",
    "children": [
      {
        "title": "namespace-2",
        "url": "module-2.namespace-2.md"
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for multiple entry points: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "42-module-name",
    "url": "42-module-name/index.md"
  },
  {
    "title": "<internal>",
    "url": "-internal-/index.md"
  },
  {
    "title": "basic",
    "url": "basic/index.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumA",
            "url": "basic/enumerations/EnumA.md"
          },
          {
            "title": "EnumB",
            "url": "basic/enumerations/EnumB.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassA",
            "url": "basic/classes/ClassA.md"
          },
          {
            "title": "ClassB",
            "url": "basic/classes/ClassB.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceA",
            "url": "basic/interfaces/InterfaceA.md"
          },
          {
            "title": "InterfaceB",
            "url": "basic/interfaces/InterfaceB.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeA",
            "url": "basic/type-aliases/TypeA.md"
          },
          {
            "title": "TypeB",
            "url": "basic/type-aliases/TypeB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-categories",
    "url": "has-categories/index.md",
    "children": [
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "Category A",
            "children": [
              {
                "title": "CategoryAEnum1",
                "url": "has-categories/enumerations/CategoryAEnum1.md"
              },
              {
                "title": "CategoryAEnum2",
                "url": "has-categories/enumerations/CategoryAEnum2.md"
              }
            ]
          },
          {
            "title": "Category B",
            "children": [
              {
                "title": "CategoryBEnum1",
                "url": "has-categories/enumerations/CategoryBEnum1.md"
              },
              {
                "title": "CategoryBEnum2",
                "url": "has-categories/enumerations/CategoryBEnum2.md"
              }
            ]
          },
          {
            "title": "Other",
            "children": [
              {
                "title": "UnCategorizedEnum",
                "url": "has-categories/enumerations/UnCategorizedEnum.md"
              }
            ]
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "Category A",
            "children": [
              {
                "title": "CategoryAInterface1",
                "url": "has-categories/interfaces/CategoryAInterface1.md"
              },
              {
                "title": "CategoryAInterface2",
                "url": "has-categories/interfaces/CategoryAInterface2.md"
              }
            ]
          },
          {
            "title": "Category B",
            "children": [
              {
                "title": "CategoryBInterface1",
                "url": "has-categories/interfaces/CategoryBInterface1.md"
              },
              {
                "title": "CategoryBInterface2",
                "url": "has-categories/interfaces/CategoryBInterface2.md"
              }
            ]
          },
          {
            "title": "Other",
            "children": [
              {
                "title": "UnCategorizedInterace",
                "url": "has-categories/interfaces/UnCategorizedInterace.md"
              }
            ]
          }
        ]
      }
    ]
  },
  {
    "title": "has-custom-groups",
    "url": "has-custom-groups/index.md",
    "children": [
      {
        "title": "Variables",
        "children": [
          {
            "title": "variableC",
            "url": "has-custom-groups/variables/variableC.md"
          }
        ]
      },
      {
        "title": "CustomGroupA",
        "children": [
          {
            "title": "variabelA",
            "url": "has-custom-groups/variables/variabelA.md"
          }
        ]
      },
      {
        "title": "CustomGroupB",
        "children": [
          {
            "title": "variableB1",
            "url": "has-custom-groups/variables/variableB1.md"
          },
          {
            "title": "variableB2",
            "url": "has-custom-groups/variables/variableB2.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-namespaces",
    "url": "has-namespaces/index.md",
    "children": [
      {
        "title": "Namespaces",
        "children": [
          {
            "title": "NamespaceB",
            "url": "has-namespaces/namespaces/NamespaceB/index.md"
          },
          {
            "title": "_Namespace_A_",
            "url": "has-namespaces/namespaces/Namespace_A/index.md",
            "children": [
              {
                "title": "Namespaces",
                "children": [
                  {
                    "title": "NestedNamespace",
                    "url": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/index.md",
                    "children": [
                      {
                        "title": "Interfaces",
                        "children": [
                          {
                            "title": "NamespaceInterface",
                            "url": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/interfaces/NamespaceInterface.md"
                          }
                        ]
                      }
                    ]
                  }
                ]
              },
              {
                "title": "Interfaces",
                "children": [
                  {
                    "title": "NamespaceInterface",
                    "url": "has-namespaces/namespaces/Namespace_A/interfaces/NamespaceInterface.md"
                  }
                ]
              }
            ]
          }
        ]
      },
      {
        "title": "Enumerations",
        "children": [
          {
            "title": "EnumB",
            "url": "has-namespaces/enumerations/EnumB.md"
          },
          {
            "title": "_Enum_A_",
            "url": "has-namespaces/enumerations/Enum_A.md"
          }
        ]
      },
      {
        "title": "Classes",
        "children": [
          {
            "title": "ClassB",
            "url": "has-namespaces/classes/ClassB.md"
          },
          {
            "title": "__Class_A_",
            "url": "has-namespaces/classes/Class_A.md"
          }
        ]
      },
      {
        "title": "Interfaces",
        "children": [
          {
            "title": "InterfaceB",
            "url": "has-namespaces/interfaces/InterfaceB.md"
          },
          {
            "title": "_Interface_A_",
            "url": "has-namespaces/interfaces/Interface_A.md"
          }
        ]
      },
      {
        "title": "Type Aliases",
        "children": [
          {
            "title": "TypeB",
            "url": "has-namespaces/type-aliases/TypeB.md"
          },
          {
            "title": "_Type_A_",
            "url": "has-namespaces/type-aliases/Type_A.md"
          }
        ]
      },
      {
        "title": "Variables",
        "children": [
          {
            "title": "_variable_A_",
            "url": "has-namespaces/variables/variable_A.md"
          },
          {
            "title": "variableB",
            "url": "has-namespaces/variables/variableB.md"
          }
        ]
      },
      {
        "title": "Functions",
        "children": [
          {
            "title": "_function_A_",
            "url": "has-namespaces/functions/function_A.md"
          },
          {
            "title": "functionB",
            "url": "has-namespaces/functions/functionB.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-references",
    "url": "has-references/index.md",
    "children": [
      {
        "title": "Functions",
        "children": [
          {
            "title": "defaultFunction",
            "url": "has-references/functions/defaultFunction.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-same-exports",
    "url": "has-same-exports/index.md",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "SomeClass",
            "url": "has-same-exports/classes/SomeClass.md"
          },
          {
            "title": "someClass",
            "url": "has-same-exports/classes/someClass-1.md"
          }
        ]
      }
    ]
  },
  {
    "title": "index",
    "url": "index/index.md",
    "children": [
      {
        "title": "Classes",
        "children": [
          {
            "title": "SomeClass",
            "url": "index/classes/SomeClass.md"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for multiple entry points: (Output File Strategy "members") (Option Group "2") 1`] = `
"[
  {
    "title": "42-module-name",
    "url": "42-module-name/index.md"
  },
  {
    "title": "<internal>",
    "url": "-internal-/index.md"
  },
  {
    "title": "basic",
    "url": "basic/index.md",
    "children": [
      {
        "title": "EnumA",
        "url": "basic/enumerations/EnumA.md"
      },
      {
        "title": "EnumB",
        "url": "basic/enumerations/EnumB.md"
      },
      {
        "title": "ClassA",
        "url": "basic/classes/ClassA.md"
      },
      {
        "title": "ClassB",
        "url": "basic/classes/ClassB.md"
      },
      {
        "title": "InterfaceA",
        "url": "basic/interfaces/InterfaceA.md"
      },
      {
        "title": "InterfaceB",
        "url": "basic/interfaces/InterfaceB.md"
      }
    ]
  },
  {
    "title": "has-categories",
    "url": "has-categories/index.md",
    "children": [
      {
        "title": "Category A",
        "children": [
          {
            "title": "CategoryAEnum1",
            "url": "has-categories/enumerations/CategoryAEnum1.md"
          },
          {
            "title": "CategoryAEnum2",
            "url": "has-categories/enumerations/CategoryAEnum2.md"
          },
          {
            "title": "CategoryAInterface1",
            "url": "has-categories/interfaces/CategoryAInterface1.md"
          },
          {
            "title": "CategoryAInterface2",
            "url": "has-categories/interfaces/CategoryAInterface2.md"
          }
        ]
      },
      {
        "title": "Category B",
        "children": [
          {
            "title": "CategoryBEnum1",
            "url": "has-categories/enumerations/CategoryBEnum1.md"
          },
          {
            "title": "CategoryBEnum2",
            "url": "has-categories/enumerations/CategoryBEnum2.md"
          },
          {
            "title": "CategoryBInterface1",
            "url": "has-categories/interfaces/CategoryBInterface1.md"
          },
          {
            "title": "CategoryBInterface2",
            "url": "has-categories/interfaces/CategoryBInterface2.md"
          }
        ]
      },
      {
        "title": "Other",
        "children": [
          {
            "title": "UnCategorizedEnum",
            "url": "has-categories/enumerations/UnCategorizedEnum.md"
          },
          {
            "title": "UnCategorizedInterace",
            "url": "has-categories/interfaces/UnCategorizedInterace.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-custom-groups",
    "url": "has-custom-groups/index.md"
  },
  {
    "title": "has-namespaces",
    "url": "has-namespaces/index.md",
    "children": [
      {
        "title": "NamespaceB",
        "url": "has-namespaces/namespaces/NamespaceB/index.md"
      },
      {
        "title": "_Namespace_A_",
        "url": "has-namespaces/namespaces/Namespace_A/index.md",
        "children": [
          {
            "title": "NestedNamespace",
            "url": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/index.md",
            "children": [
              {
                "title": "NamespaceInterface",
                "url": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/interfaces/NamespaceInterface.md"
              }
            ]
          },
          {
            "title": "NamespaceInterface",
            "url": "has-namespaces/namespaces/Namespace_A/interfaces/NamespaceInterface.md"
          }
        ]
      },
      {
        "title": "EnumB",
        "url": "has-namespaces/enumerations/EnumB.md"
      },
      {
        "title": "_Enum_A_",
        "url": "has-namespaces/enumerations/Enum_A.md"
      },
      {
        "title": "ClassB",
        "url": "has-namespaces/classes/ClassB.md"
      },
      {
        "title": "__Class_A_",
        "url": "has-namespaces/classes/Class_A.md"
      },
      {
        "title": "InterfaceB",
        "url": "has-namespaces/interfaces/InterfaceB.md"
      },
      {
        "title": "_Interface_A_",
        "url": "has-namespaces/interfaces/Interface_A.md"
      }
    ]
  },
  {
    "title": "has-references",
    "url": "has-references/index.md"
  },
  {
    "title": "has-same-exports",
    "url": "has-same-exports/index.md",
    "children": [
      {
        "title": "SomeClass",
        "url": "has-same-exports/classes/SomeClass.md"
      },
      {
        "title": "someClass",
        "url": "has-same-exports/classes/someClass-1.md"
      }
    ]
  },
  {
    "title": "index",
    "url": "index/index.md",
    "children": [
      {
        "title": "SomeClass",
        "url": "index/classes/SomeClass.md"
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for multiple entry points: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "42-module-name",
    "url": "42-module-name.md"
  },
  {
    "title": "<internal>",
    "url": "-internal-.md"
  },
  {
    "title": "basic",
    "url": "basic.md"
  },
  {
    "title": "has-categories",
    "url": "has-categories.md"
  },
  {
    "title": "has-custom-groups",
    "url": "has-custom-groups.md"
  },
  {
    "title": "has-namespaces",
    "url": "has-namespaces/index.md",
    "children": [
      {
        "title": "Namespaces",
        "children": [
          {
            "title": "NamespaceB",
            "url": "has-namespaces/namespaces/NamespaceB.md"
          },
          {
            "title": "_Namespace_A_",
            "url": "has-namespaces/namespaces/Namespace_A/index.md",
            "children": [
              {
                "title": "Namespaces",
                "children": [
                  {
                    "title": "NestedNamespace",
                    "url": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace.md"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  {
    "title": "has-references",
    "url": "has-references.md"
  },
  {
    "title": "has-same-exports",
    "url": "has-same-exports.md"
  },
  {
    "title": "index",
    "url": "module_index.md"
  }
]"
`;

exports[`Navigation should gets Navigation Json for multiple entry points: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[
  {
    "title": "42-module-name",
    "url": "42-module-name.md"
  },
  {
    "title": "<internal>",
    "url": "-internal-.md"
  },
  {
    "title": "basic",
    "url": "basic.md"
  },
  {
    "title": "has-categories",
    "url": "has-categories.md",
    "children": []
  },
  {
    "title": "has-custom-groups",
    "url": "has-custom-groups.md"
  },
  {
    "title": "has-namespaces",
    "url": "has-namespaces/index.md",
    "children": [
      {
        "title": "NamespaceB",
        "url": "has-namespaces/namespaces/NamespaceB.md"
      },
      {
        "title": "_Namespace_A_",
        "url": "has-namespaces/namespaces/Namespace_A/index.md",
        "children": [
          {
            "title": "NestedNamespace",
            "url": "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace.md"
          }
        ]
      }
    ]
  },
  {
    "title": "has-references",
    "url": "has-references.md"
  },
  {
    "title": "has-same-exports",
    "url": "has-same-exports.md"
  },
  {
    "title": "index",
    "url": "module_index.md"
  }
]"
`;

exports[`Navigation should gets Navigation Json for single entry point: (Output File Strategy "members") (Option Group "1") 1`] = `
"[
  {
    "title": "Accessors",
    "children": [
      {
        "title": "ClassWithAccessors",
        "url": "classes/ClassWithAccessors.md"
      }
    ]
  },
  {
    "title": "Basic",
    "children": [
      {
        "title": "BasicClass",
        "url": "classes/BasicClass.md"
      }
    ]
  },
  {
    "title": "Inheritance",
    "children": [
      {
        "title": "AbstractClass",
        "url": "classes/AbstractClass.md"
      },
      {
        "title": "DerivedClassA",
        "url": "classes/DerivedClassA.md"
      },
      {
        "title": "DerivedClassB",
        "url": "classes/DerivedClassB.md"
      },
      {
        "title": "DisposableClass",
        "url": "classes/DisposableClass.md"
      }
    ]
  },
  {
    "title": "Other",
    "children": [
      {
        "title": "BasicEnum",
        "url": "enumerations/BasicEnum.md"
      },
      {
        "title": "EnumWithValues",
        "url": "enumerations/EnumWithValues.md"
      },
      {
        "title": "CallbacksOptions",
        "url": "classes/CallbacksOptions.md"
      },
      {
        "title": "ClassWithFlags",
        "url": "classes/ClassWithFlags.md"
      },
      {
        "title": "ClassWithModifiers",
        "url": "classes/ClassWithModifiers.md"
      },
      {
        "title": "BasicInterface",
        "url": "interfaces/BasicInterface.md"
      },
      {
        "title": "CustomEventInterface",
        "url": "interfaces/CustomEventInterface.md"
      },
      {
        "title": "ExtendedInterface",
        "url": "interfaces/ExtendedInterface.md"
      },
      {
        "title": "IndexableInterface",
        "url": "interfaces/IndexableInterface.md"
      },
      {
        "title": "InterfaceWithEventProperties",
        "url": "interfaces/InterfaceWithEventProperties.md"
      },
      {
        "title": "InterfaceWithFlags",
        "url": "interfaces/InterfaceWithFlags.md"
      },
      {
        "title": "InterfaceWithTypeParameters",
        "url": "interfaces/InterfaceWithTypeParameters.md"
      },
      {
        "title": "ArrayOfStuff",
        "url": "type-aliases/ArrayOfStuff.md"
      },
      {
        "title": "ArrayType",
        "url": "type-aliases/ArrayType.md"
      },
      {
        "title": "ConditionalType",
        "url": "type-aliases/ConditionalType.md"
      },
      {
        "title": "ExternalReferenceType",
        "url": "type-aliases/ExternalReferenceType.md"
      },
      {
        "title": "FunctionType",
        "url": "type-aliases/FunctionType.md"
      },
      {
        "title": "IndexAccessType",
        "url": "type-aliases/IndexAccessType.md"
      },
      {
        "title": "IntersectionType",
        "url": "type-aliases/IntersectionType.md"
      },
      {
        "title": "LiteralType",
        "url": "type-aliases/LiteralType.md"
      },
      {
        "title": "PartialMappedType",
        "url": "type-aliases/PartialMappedType.md"
      },
      {
        "title": "PrimitiveType",
        "url": "type-aliases/PrimitiveType.md"
      },
      {
        "title": "PromiseTypeWithObject",
        "url": "type-aliases/PromiseTypeWithObject.md"
      },
      {
        "title": "PromiseTypeWithSymbol",
        "url": "type-aliases/PromiseTypeWithSymbol.md"
      },
      {
        "title": "QueryType",
        "url": "type-aliases/QueryType.md"
      },
      {
        "title": "ReadonlyMappedType",
        "url": "type-aliases/ReadonlyMappedType.md"
      },
      {
        "title": "StringLiteralType",
        "url": "type-aliases/StringLiteralType.md"
      },
      {
        "title": "TupleType",
        "url": "type-aliases/TupleType.md"
      },
      {
        "title": "TypeWithExternalSymbolLinkMapping",
        "url": "type-aliases/TypeWithExternalSymbolLinkMapping.md"
      },
      {
        "title": "TypeWithTypeParams",
        "url": "type-aliases/TypeWithTypeParams.md"
      },
      {
        "title": "UnionType",
        "url": "type-aliases/UnionType.md"
      },
      {
        "title": "UnionTypeWithTemplateStrings",
        "url": "type-aliases/UnionTypeWithTemplateStrings.md"
      },
      {
        "title": "__TypeDeclarationWithSpecialCharacters_",
        "url": "type-aliases/TypeDeclarationWithSpecialCharacters.md"
      },
      {
        "title": "objectLiteralVariable",
        "url": "variables/objectLiteralVariable.md"
      },
      {
        "title": "objectWithSymbol",
        "url": "variables/objectWithSymbol.md"
      },
      {
        "title": "someQuery",
        "url": "variables/someQuery.md"
      },
      {
        "title": "stringVariable",
        "url": "variables/stringVariable.md"
      },
      {
        "title": "typeOperatorVariable",
        "url": "variables/typeOperatorVariable.md"
      },
      {
        "title": "basicFunction",
        "url": "functions/basicFunction.md"
      },
      {
        "title": "functionReturningAFunction",
        "url": "functions/functionReturningAFunction.md"
      },
      {
        "title": "functionReturningAPromise",
        "url": "functions/functionReturningAPromise.md"
      },
      {
        "title": "functionReturningAString",
        "url": "functions/functionReturningAString.md"
      },
      {
        "title": "functionReturningAUnionType",
        "url": "functions/functionReturningAUnionType.md"
      },
      {
        "title": "functionReturningAnObject",
        "url": "functions/functionReturningAnObject.md"
      },
      {
        "title": "functionWithComplexParams",
        "url": "functions/functionWithComplexParams.md"
      },
      {
        "title": "functionWithDefaultParameters",
        "url": "functions/functionWithDefaultParameters.md"
      },
      {
        "title": "functionWithMultipleSignatures",
        "url": "functions/functionWithMultipleSignatures.md"
      },
      {
        "title": "functionWithNamedParams",
        "url": "functions/functionWithNamedParams.md"
      },
      {
        "title": "functionWithNestedParameters",
        "url": "functions/functionWithNestedParameters.md"
      },
      {
        "title": "functionWithOptionalParameters",
        "url": "functions/functionWithOptionalParameters.md"
      },
      {
        "title": "functionWithRestParams",
        "url": "functions/functionWithRestParams.md"
      },
      {
        "title": "functionWithTypeParameters",
        "url": "functions/functionWithTypeParameters.md"
      }
    ]
  },
  {
    "title": "Overloads",
    "children": [
      {
        "title": "ClassWithConstructorOverloads",
        "url": "classes/ClassWithConstructorOverloads.md"
      },
      {
        "title": "ClassWithTypeParameters",
        "url": "classes/ClassWithTypeParameters.md"
      }
    ]
  }
]"
`;

exports[`Navigation should gets Navigation Json for single entry point: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[
  {
    "title": "Accessors",
    "children": []
  },
  {
    "title": "Basic",
    "children": []
  },
  {
    "title": "Inheritance",
    "children": []
  },
  {
    "title": "Other",
    "children": []
  },
  {
    "title": "Overloads",
    "children": []
  }
]"
`;
